fix access check